[fix]: Fixe name of team not align

--- a/exoweb/src/pages/team.css
+++ b/exoweb/src/pages/team.css
@@ -48,7 +48,6 @@
     }
 
     .team-subtitle {
-        width: min-content;
         justify-self: center;
     }
 }
